Fix editor API routing for /editor subfolder

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,23 @@
 {
   "functions": {
-    "api/**/*.js": {
+    "editor/api/**/*.js": {
       "memory": 1024,
       "maxDuration": 30
     }
   },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/editor",
+      "destination": "/editor/index.html"
+    },
+    {
+      "source": "/editor/(.*)",
+      "destination": "/editor/$1"
     }
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/editor/api/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Credentials",
@@ -35,5 +39,4 @@
     }
   ]
 }
-
 
